--- a/src/lib/TextInput/textinput.postcss
+++ b/src/lib/TextInput/textinput.postcss
@@ -4,4 +4,11 @@
 		width: 24px;
 		height: 24px;
 	}
+	input[type=number]::-webkit-inner-spin-button, 
+	input[type=number]::-webkit-outer-spin-button { 
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
+		margin: 0; 
+	}
 }
