--- a/src/app.css
+++ b/src/app.css
@@ -221,9 +221,8 @@ button:focus-visible {
   flex-direction: column;
   justify-content: space-between;
   border: 2px solid #f9f9f9;
-  border-radius: 8px;
   padding: 2rem;
-  background-color: #f6f7f6;
+  background-color: transparent;
   & .codesnippet .language-html {
     align-items: center;
     display: flex;
